Jazz hands - about us and cosmetic upgrades

--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -8,8 +8,9 @@
     <ul class="uk-switcher">
         <li>
             <div uk-grid class="uk-grid-divider">
-                <div class="uk-width-1-2 uk-text-right">
-                    <div class="time">4:00pm</div>
+                <div class="uk-width-1-2 uk-text-right time-column">
+                    <div class="time">4:30pm</div>
+                    <div class="time-icon"><img src="assets/img/wedding.png"/></div>
                 </div>
                 <div class="uk-width-1-2">
                     <div class="schedule-item">
@@ -18,8 +19,9 @@
                     </div>
                 </div>
 
-                <div class="uk-width-1-2 uk-text-right">
+                <div class="uk-width-1-2 uk-text-right time-column">
                     <div class="time">5:00pm</div>
+                    <div class="time-icon"><img src="assets/img/glasses.png"/></div>
                 </div>
                 <div class="uk-width-1-2">
                     <div class="schedule-item">
@@ -28,8 +30,9 @@
                     </div>
                 </div>
 
-                <div class="uk-width-1-2 uk-text-right">
+                <div class="uk-width-1-2 uk-text-right time-column">
                     <div class="time">6:00pm</div>
+                    <div class="time-icon"><img src="assets/img/table.png"/></div>
                 </div>
                 <div class="uk-width-1-2">
                     <div class="schedule-item">
@@ -38,12 +41,13 @@
                     </div>
                 </div>
 
-                <div class="uk-width-1-2 uk-text-right">
+                <div class="uk-width-1-2 uk-text-right time-column">
                     <div class="time">7:30pm</div>
+                    <div class="time-icon"><img src="assets/img/desserts.png"/></div>
                 </div>
                 <div class="uk-width-1-2">
                     <div class="schedule-item">
-                        <p class="title uk-text-lead">Dessert &amp; Dancing!</p>
+                        <p class="title uk-text-lead">Dessert &amp; Dancing</p>
                         <p class="location">Main Barn</p>
                     </div>
                 </div>
