--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -23,6 +23,8 @@
             <app-parks></app-parks>
 
             <app-faq></app-faq>
+
+            <app-story></app-story>
             
             <app-gallery></app-gallery>
         </div>
