--- a/src/app/schedule/schedule.component.css
+++ b/src/app/schedule/schedule.component.css
@@ -73,3 +73,16 @@
         padding: 5px 15px;
     }
 }
+.time-column div {
+    font-size: 1.5rem;
+    display: inline-block;
+}
+.time-column .time {
+    padding: 10px 20px;
+}
+.time-column img {
+    margin-right: -20px;
+}
+p.title {
+    color: white;
+}
