--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -5,7 +5,7 @@
         What's the dress code?
       </h2>
       <p class="answer">
-       Our event will be dressy casual. This includes slacks and a dress shirt with or without a tie for men, and a blouse and skirt/slacks or dress for women. However, 
+       Our event will be dressy casual. This traditionally includes slacks and a dress shirt with or without a tie for men, and a blouse and skirt/slacks or dress for women. However, 
        please wear whatever makes you feel comfortable and beautiful.
       </p>
     </div>
@@ -15,7 +15,7 @@
           What kind of food will be served?
         </h2>
         <p class="answer">
-          We will be serving appetizers during cocktail hour as well as a traditional dinner in the main barn later in the evening. This will be followed by 
+          We will be serving appetizers during cocktail hour as well as a seated dinner in the main barn later in the evening. This will be followed by 
           the most important course of the night, dessert!
         </p>
       </div>
