--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -101,6 +101,7 @@
             </div>
         </li>
         <li>
+            <p>Have your own photos to share? Upload them here to add them to our guest book. We'll be displaying them along with our photobooth photos taken throughout the night.</p>
             <form action="/uploadImage" class="dropzone" id="myDropzone" enctype="multipart/form-data">
             </form>
         </li>
