--- a/src/app/story/story.component.html
+++ b/src/app/story/story.component.html
@@ -15,7 +15,7 @@
       Darin was excited when she wanted to watch Adventure Time and play with Legos on their third date. Caitlin was impressed that he brought blackberries and brie to a dinner party she was hosting. We both had a propensity for stopping in the middle of a conversation to go on the balcony and watch a breaking thunderstorm.
     </p>
     <p>
-      We began to spend more time together, playing board games, going on walks, and taking photographs. On the weekends we would share the kitchen to make meals from glossy cookbooks or childhood memories, best enjoyed over Star Wars marathons or one of many animated series.
+      We began to spend more time together, playing board games, going on walks, and taking trips where Darin could take photographs and attempt to teach Caitlin some architectural terms such as "chamfer" and "tensegrity". On the weekends we would share the kitchen to make meals from glossy cookbooks or childhood memories, best enjoyed over Star Wars marathons or one of many animated series.
     </p>
     <hr class="uk-divider-icon" />
     <p>
