--- a/src/app/story/story.component.html
+++ b/src/app/story/story.component.html
@@ -1,18 +1,18 @@
 <div class="site-section" id="story-section">
     <h2>Our Story</h2>
   <div class="uk-grid">
-    <div class="uk-width-1-4">
+    <div class="uk-width-1-4@m">
       <blockquote>People are like cities: We all have alleys and gardens and secret rooftops and places where daisies sprout between the sidewalk cracks,
         but most of the time all we let each other see is a postcard glimpse of a skyline or a polished square. Love lets you find those hidden places in another person, 
         even the ones they didn’t know were there, even the ones they wouldn’t have thought to call beautiful themselves.</blockquote>
-        <p>- Hilary T. Smith</p>
+        <p id="quote-author">- Hilary T. Smith</p>
     </div>
-    <div class="uk-width-3-4">
+    <div class="uk-width-3-4@m">
      <p>
       Caitlin and Darin were introduced to each other by an algorithm - which, for being a software developer, Caitlin felt was all too appropriate. We met at a coffee shop where Caitlin proceeded to nervously drink too much coffee and then compensate for her nerves by talking at the frantic pace of an auctioneer. Darin patiently responded with conversation about many nerdy things with great enthusiasm, including the pros and cons of thorium reactors. He asked her out for another date and she, of course, said yes.
     </p>
      <p>
-      Darin was excited when she wanted to watch Adventure Time and play with Legos on their third date. Caitlin was impressed that he brought blackberries and brie to a dinner party she was hosting. We both had a propensity for stopping in the middle of a conversation to go on the balcony and watch a breaking thunderstorm.
+      Darin was excited when she wanted to watch Adventure Time and play with Legos on our third date. Caitlin was impressed that he brought blackberries and brie to a dinner party she was hosting. We both had a propensity for stopping in the middle of a conversation to go on the balcony and watch a breaking thunderstorm.
     </p>
     <p>
       We began to spend more time together, playing board games, going on walks, and taking trips where Darin could take photographs and attempt to teach Caitlin some architectural terms such as "chamfer" and "tensegrity". On the weekends we would share the kitchen to make meals from glossy cookbooks or childhood memories, best enjoyed over Star Wars marathons or one of many animated series.
