--- a/src/app/story/story.component.css
+++ b/src/app/story/story.component.css
@@ -5,3 +5,9 @@ blockquote {
     color: rgba(255,255,255, .7);
     font-size: 1rem;
 }
+.site-section {
+    padding: 10px;
+}
+#quote-author {
+    margin-bottom: 50px;
+}
