--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <div id="footer">
+        <div class="uk-background-cover" id="footer">
             <img id="ring-box" src="assets/img/ring-box.png">
             <div id="sub-footer">
                 <div id="countdown" uk-countdown="date: 2019-11-02T18:00:00+00:00">See you in <span class="uk-countdown-number uk-countdown-days uk-text-small"> </span> days!</div>
