--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -5,7 +5,7 @@
       <div class="uk-cover-container uk-height-viewport" >
           <img uk-cover src="assets/img/hero.jpg" id="cover-img"/>
           <div id="title">
-              <img id="ne-img" src="assets/img/ne.png" />
+              <img id="ne-img" src="assets/img/NE-logo.svg" />
           </div>
           <p id="img-caption">A sunny day near the Dismal River in the Nebraska Sandhills</p>
       </div>
