Fix navigation transparency

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -39,7 +39,7 @@
           </h2>
           <p class="answer">
             We will be having an open bar, so you won't have to go hunting down an ATM 30 minutes before the ceremony starts! In addition to beer, wine, and cocktails, 
-            we will have a few non-alcoholic drinks (and a lot of water!) available as well.
+            we will have coffee and soft drinks (and a lot of water!) available as well.
           </p>
       </div>
 
