--- a/src/app/story/story.component.html
+++ b/src/app/story/story.component.html
@@ -19,7 +19,7 @@
     </p>
     <hr class="uk-divider-icon" />
     <p>
-      Good job opportunities both in tech and architecture gave us an opportunity to move to Seattle and experience the forests, mountains, and culinary diversity of the Pacific Northwest. We now enjoy going on hikes together and getting to capture the occasional glimpse of forest animals. While still woefully unprepared to talk about the local football team, we do enjoy being walking distance from many other local events and occasionally watching them from our balcony on summer afternoons.
+      Good job opportunities both in tech and architecture gave us a chance to move to Seattle and experience the forests, mountains, and culinary diversity of the Pacific Northwest. We now enjoy going on hikes together and getting to capture the occasional glimpse of forest animals. While still woefully unprepared to talk about the local football team, we do enjoy being walking distance from many other local events and occasionally watching them from our balcony on summer afternoons.
     </p><p>
       Although we love Seattle, we still miss the Midwest, and we are greatly looking forward to celebrating our wedding somewhere we feel we know so well.
      </p>
