--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,5 +1,5 @@
 .uk-navbar-container#nav {
-    background: rgb(52,52,52,.5);
+    background: rgba(52,52,52,.5);
 }
 @media only screen and (max-width: 600px) {
     .uk-navbar-nav a {
