--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -11,8 +11,11 @@
 }
 
 .site-section {
-    margin-top: 50px !important;
+    margin-top: -60px !important;
     margin-bottom: 100px !important;
+}
+h1 {
+    margin-top: 60px;
 }
 .gallery-img {
     display: inline-block;
