--- a/src/app/story/story.component.css
+++ b/src/app/story/story.component.css
@@ -7,6 +7,10 @@ blockquote {
 }
 .site-section {
     padding: 10px;
+    margin-top: -60px;
+}
+h1 {
+    margin-top: 60px;
 }
 #quote-author {
     margin-bottom: 50px;
