--- a/src/app/rsvp/rsvp.component.css
+++ b/src/app/rsvp/rsvp.component.css
@@ -52,6 +52,7 @@
 #rsvp-title {
     font-size: 2.625rem;
     color: white;
+    text-align: center;
 }
 #rsvp-icon {
     height: 80px;
@@ -59,6 +60,11 @@
     margin-right: auto;
 }
 
+
+/* TEMPORARY FIX FOR FIREFOX, PLEASE FIX FOR REAL THANKS */
+#left-wing, #right-wing {
+    display: none !important;
+}
 /* From: https://codepen.io/cihadturhan/pen/KIJdD */
 
 #plate.front {
