Scrapped plane components that weren't mobile friendly

--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,12 +1,11 @@
 <div class="site-section" id="rsvp-section">
-
-  <div id="plate" class="front rsvp-container">
+<div class="rsvp-container">
     <form uk-grid class="uk-grid-small uk-text-center" id="rsvp-form">
     
             <!-- Remove rsvp-title ID if you want to remove large, white formatting-->
             <legend class="uk-legend" id="rsvp-title">RSVP</legend>
-            <img src="../../assets/img/rsvp.png" alt="RSVP-icon" id="rsvp-icon">
-            <p>We will start accepting RSVP's once invitations are sent out. Look for your letter in the mail sometime in August.</p>
+            <div class="rsvp-content"><img src="../../assets/img/rsvp.png" alt="RSVP-icon" id="rsvp-icon"></div>
+            <div class="rsvp-content"><p>We will start accepting RSVP's once invitations are sent out. Look for your letter in the mail sometime in August.</p></div>
 
             <!-- <div class="uk-margin uk-width-1-2">
                 <input class="uk-input" type="text" id="firstName" placeholder="First Name">
@@ -24,22 +23,6 @@
 
             <div class="uk-button uk-button-default" id="send"><span>Submit</span></div> -->
     </form>
-  </div>
-  <div id="container" class="beginning">
-      <div id="left-wing">
-          <div class="top_left curvable"> </div>
-          <div class="bottom_left curvable"> </div>
-          <div class="wing wing1"></div>
-          <div class="wing wing2"></div>
-      </div>
-
-      <div id="right-wing">
-          <div class="top_right curvable"> </div>
-          <div class="bottom_right curvable"> </div>
-          <div class="wing wing3"></div>
-          <div class="wing wing4"></div>
-      </div>
-
   </div>
 </div>
 <br />
