--- a/src/app/rsvp/rsvp.component.css
+++ b/src/app/rsvp/rsvp.component.css
@@ -7,6 +7,7 @@
 }
 .site-section {
     padding: 10px;
+    margin-top: -60px;
 }
 
 #send span, #lookup-button span {
@@ -56,4 +57,7 @@
 }
 .rsvp-content {
     padding-left: 0;
+}
+legend {
+    margin-top: 60px;
 }
