Manual mobile header

--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -2,8 +2,9 @@
         <!-- 
             Hero header
          -->
-      <div class="uk-cover-container uk-height-viewport" >
-          <img uk-cover src="assets/img/hero.jpg" id="cover-img"/>
+      <div class="uk-cover-container uk-height-viewport">
+          <img class="uk-cover" uk-cover src="assets/img/hero.jpg" id="cover-img"/>
+          <img src="assets/img/hero-mobile.jpg" id="cover-img-mobile"/>
           <div id="title">
               <img id="ne-img" src="assets/img/NE-logo.svg" />
           </div>
