--- a/src/app/wedding/wedding.component.css
+++ b/src/app/wedding/wedding.component.css
@@ -32,6 +32,9 @@ body {
     max-width: 100%;
     opacity: 0.4;
 }
+#cover-img-mobile {
+    display: none;
+}
 
 @media (min-width: 768px) and (max-width: 1024px) {
     #cover-img {
@@ -42,11 +45,18 @@ body {
 
 @media (max-width: 768px) {
     #cover-img {
+        display: none;
+    }
+    #cover-img-mobile {
+        display: block;
+        height: 100vh;
+        margin-left: -25%;
         max-width: none;
-        left: 120%
+        opacity: .4;
     }
     #ne-img {
         margin-top: -155% !important;
+        width: 250px;
     }
 }
 
