Another downsizing attempt

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -27,7 +27,7 @@
                         <div class="sub-row">
                             <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_1.jpg" data-caption="Nap time with AT-AT"><img src="assets/img/gallery/thumbs/D_1.jpg"></a></div>
                             <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_2.jpg" data-caption="Taking a photography break at Plaza de España"><img src="assets/img/gallery/thumbs/D_2.jpg"></a></div>
-                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_3.jpg"><img src="assets/img/gallery/thumbs/D_3.jpg"></a></div>
+                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_3.jpg" data-caption="Enjoying a walk on the river"><img src="assets/img/gallery/thumbs/D_3.jpg"></a></div>
                         </div>
                         <div class="sub-row">
                             <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_4.jpg" data-caption="Caught the crocuses in bloom in front of York Minster"><img src="assets/img/gallery/thumbs/D_4.jpg"></a></div>
