--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -38,8 +38,7 @@
             What kind of drinks will be available?
           </h2>
           <p class="answer">
-            We will be having an open bar, so you won't have to go hunting down an ATM 30 minutes before the ceremony starts! In addition to beer, wine, and cocktails, 
-            we will have coffee and soft drinks (and a lot of water!) available as well.
+            We will have coffee, soft drinks, and plenty of water available. In addition, we will also have an open bar with beer, wine and cocktails, so you won't have to go hunting down an ATM 30 minutes before the ceremony starts!
           </p>
       </div>
 
@@ -49,8 +48,8 @@
           </h2>
           <p class="answer">
             Free parking is available onsite at the venue just feet from the door, which is very convenient especially if the weather ends up being crummy! If you prefer not 
-            to drive, you can look into getting an <a href="https://www.uber.com/cities/lincoln/">Uber</a>, <a href="https://www.lyft.com/rider/cities/lincoln-ne">Lyft</a>, 
-            or <a href="http://happycab.com/">taxi</a>.
+            to drive, you can look into getting an <a href="https://www.uber.com/cities/lincoln/" target="_blank">Uber</a>, <a href="https://www.lyft.com/rider/cities/lincoln-ne" target="_blank">Lyft</a>, 
+            or <a href="http://happycab.com/" target="_blank">taxi</a>.
           </p>
       </div>
 
