--- a/src/app/parks/parks.component.html
+++ b/src/app/parks/parks.component.html
@@ -1,9 +1,9 @@
 <div class="site-section" id="parks-section">
     <h2>Why the National Park Foundation is on our registry</h2>
     <p>
-        The parks have become even more special to us after Darin proposed at Christine Falls in Mt. Rainier National Park. We have hiked together through hundreds of miles of trails on national, state, and local parks before and since then. We hope that preserving these trails for future generations inspires others to take better care of our planet and give everyone the opportunity to enjoy the serenity of nature.
+        The parks have become even more special to us after Darin proposed at Christine Falls in Mt. Rainier National Park. We have hiked together on dozens of trails in national, state, and local parks before and since then. We hope that preserving these trails for future generations inspires others to take better care of our planet and give everyone the opportunity to enjoy the serenity of nature.
     </p>
-    <p>Below is a map of the fantastic National Parks and Historic Sites we have gotten to explore. Please add a pin to any you have been to!</p>
+    <p>Below is a map of the fantastic National Parks and Historic Sites we have gotten to explore. Please feel free to add a pin to any you have been to!</p>
     <div class="uk-text-center"><button class="uk-button uk-button-default" id="add-park-btn" uk-toggle="target: #park-list">+ Add a Pin</button> <br /></div>
     <div id="park-list" uk-modal>
             <div class="uk-modal-dialog uk-modal-body">
