--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -7,6 +7,8 @@
 
     <ul class="uk-switcher">
         <li>
+        <p class="uk-text-center">Schedule tentative until closer to the wedding</p>
+        <br />
             <div uk-grid class="uk-grid-divider">
                 <div class="uk-width-1-2 uk-text-right time-column">
                     <div class="time">4:30pm</div>
@@ -190,7 +192,7 @@
                             <h3 class="uk-card-title">Misty's</h3>
                             <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
                                 <div class="uk-width-5-6">
-                                    <p>Misty's is a classic steakhouse in downtown, Havelock, and Williamsburg. They have a wide variety of dishes and make fantastic burgers. They 
+                                    <p>Misty's is a classic steakhouse in Downtown, Havelock, and Williamsburg. They have a wide variety of dishes and make fantastic burgers. They 
                                         also brew their own beer out of their downtown location.
                                     </p>
                                 </div>
@@ -243,7 +245,7 @@
                             <h3 class="uk-card-title">Zipline Beer Hall</h3>
                             <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
                                 <div class="uk-width-5-6">
-                                    <p>Our favorite Lincoln brewery opened a brand-new beer hall and it's right by the wedding venue! This location offers a more relaxed location 
+                                    <p>Our favorite Lincoln brewery opened a brand-new beer hall and it's right by the wedding venue! This location offers a more relaxed environment 
                                         to enjoy their many handcrafted brews including several limited-edition and seasonal taps.
                                     </p>
                                 </div>
