Defer js resources

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <link rel="stylesheet" href="../assets/css/uikit.min.css" />
-<link rel="stylesheet" href="../assets/css/dropzone.css" />
+<link rel="stylesheet" href="../assets/css/dropzone.min.css" />
 <link rel="stylesheet" href="../assets/css/site.css" />
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Charmonman|La+Belle+Aurore|Montaga|Petit+Formal+Script|Petrona|Sree+Krushnadevaraya|Srisakdi" rel="stylesheet">
