--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -71,3 +71,18 @@
             </div>
         </div>
     </div>
+
+    <script>
+     const images = document.querySelectorAll('.uk-background-cover');
+     const config = {
+  // If the image gets within 50px in the Y axis, start the download.
+  rootMargin: '50px 0px',
+  threshold: 0.01
+};
+
+// The observer for the images on the page
+let observer = new IntersectionObserver(onIntersection, config);
+  images.forEach(image => {
+    observer.observe(image);
+  });
+    </script>
