--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -10,31 +10,31 @@
             <div uk-lightbox>
                 <div id="row-1"> 
                     <div class="sub-section">
-                        <div class="a-item gallery-img"><a href="assets/img/gallery/img/A_1.jpg" data-caption="Visiting Yellowstone on our way to Seattle"><img src="assets/img/gallery/thumbs/A_1.jpg"></a></div>
+                        <div class="a-item gallery-img"><a href="assets/img/gallery/img/A_1.jpg" data-caption="Visiting Yellowstone on our way to Seattle"><img class="gallery-thumb" src="assets/img/gallery/thumbs/A_1.jpg"></a></div>
                     </div>
                     <div class="sub-section">
                         <div class="sub-row">
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_1.jpg" data-caption="Autumn leaves in Seattle"><img src="assets/img/gallery/thumbs/B_1.jpg"></a></div>
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_2.jpg" data-caption="Darin got to meet the baby red pandas at the Lincoln Zoo!"><img src="assets/img/gallery/thumbs/B_2.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_1.jpg" data-caption="Autumn leaves in Seattle"><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_1.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_2.jpg" data-caption="Darin got to meet the baby red pandas at the Lincoln Zoo!"><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_2.jpg"></a></div>
                         </div>
                         <div class="sub-row">
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_3.jpg" data-caption="Wintry day in the Cascades"><img src="assets/img/gallery/thumbs/B_3.jpg"></a></div>
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_4.jpg" data-caption="Hiking up to Source Lake to find Pika"><img src="assets/img/gallery/thumbs/B_4.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_3.jpg" data-caption="Wintry day in the Cascades"><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_3.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_4.jpg" data-caption="Hiking up to Source Lake to find Pika"><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_4.jpg"></a></div>
                         </div>
                     </div>
                     
                     <div class="sub-section">
                         <div class="sub-row">
-                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_1.jpg" data-caption="Nap time with AT-AT"><img src="assets/img/gallery/thumbs/D_1.jpg"></a></div>
-                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_2.jpg" data-caption="Taking a photography break at Plaza de España"><img src="assets/img/gallery/thumbs/D_2.jpg"></a></div>
-                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_3.jpg" data-caption="Enjoying a walk on the river"><img src="assets/img/gallery/thumbs/D_3.jpg"></a></div>
+                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_1.jpg" data-caption="Nap time with AT-AT"><img class="gallery-thumb" src="assets/img/gallery/thumbs/D_1.jpg"></a></div>
+                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_2.jpg" data-caption="Taking a photography break at Plaza de España"><img class="gallery-thumb" src="assets/img/gallery/thumbs/D_2.jpg"></a></div>
+                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_3.jpg" data-caption="Enjoying a walk on the river"><img class="gallery-thumb" src="assets/img/gallery/thumbs/D_3.jpg"></a></div>
                         </div>
                         <div class="sub-row">
-                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_4.jpg" data-caption="Caught the crocuses in bloom in front of York Minster"><img src="assets/img/gallery/thumbs/D_4.jpg"></a></div>
-                            <div class="c-item gallery-img"><a href="assets/img/gallery/img/C_1.jpg" data-caption="Impromptu photo shoot in the Sandhills"><img src="assets/img/gallery/thumbs/C_1.jpg"></a></div>
+                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_4.jpg" data-caption="Caught the crocuses in bloom in front of York Minster"><img class="gallery-thumb" src="assets/img/gallery/thumbs/D_4.jpg"></a></div>
+                            <div class="c-item gallery-img"><a href="assets/img/gallery/img/C_1.jpg" data-caption="Impromptu photo shoot in the Sandhills"><img class="gallery-thumb" src="assets/img/gallery/thumbs/C_1.jpg"></a></div>
                         </div>
                         <div class="sub-row">
-                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_5.jpg" data-caption="Double rainbow over Lincoln"><img src="assets/img/gallery/thumbs/D_5.jpg"></a></div>
+                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_5.jpg" data-caption="Double rainbow over Lincoln"><img class="gallery-thumb" src="assets/img/gallery/thumbs/D_5.jpg"></a></div>
                             
                         </div>
                     </div>
@@ -42,59 +42,59 @@
                 <div id="row-2">
                     <div class="sub-section">
                         <div class="sub-row">
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_5.jpg" data-caption="Our attempt at a full English breakfast"><img src="assets/img/gallery/thumbs/B_5.jpg"></a></div>
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_6.jpg" data-caption="We got a chance to hike Rainier again after our engagement and we could see the mountain this time"><img src="assets/img/gallery/thumbs/B_6.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_5.jpg" data-caption="Our attempt at a full English breakfast"><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_5.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_6.jpg" data-caption="We got a chance to hike Rainier again after our engagement and we could see the mountain this time"><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_6.jpg"></a></div>
                         </div>
                         <div class="sub-row">
-                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_1.jpg" data-caption="Thick Seattle fog from our apartment window"><img src="assets/img/gallery/thumbs/E_1.jpg"></a></div>
-                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_2.jpg" data-caption="A scenic fall day at the Nisqually Wildlife Refuge"><img src="assets/img/gallery/thumbs/E_2.jpg"></a></div>
-                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_3.jpg" data-caption="Playing with flashlights in front of the Sheldon Art Gallery"><img src="assets/img/gallery/thumbs/E_3.jpg"></a></div>
+                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_1.jpg" data-caption="Thick Seattle fog from our apartment window"><img class="gallery-thumb" src="assets/img/gallery/thumbs/E_1.jpg"></a></div>
+                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_2.jpg" data-caption="A scenic fall day at the Nisqually Wildlife Refuge"><img class="gallery-thumb" src="assets/img/gallery/thumbs/E_2.jpg"></a></div>
+                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_3.jpg" data-caption="Playing with flashlights in front of the Sheldon Art Gallery"><img class="gallery-thumb" src="assets/img/gallery/thumbs/E_3.jpg"></a></div>
                         </div>
                     </div>
 
                     <div class="sub-section">
                         <div class="sub-row">
-                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_6.jpg" data-caption="Prismatic spring at Yellowstone"><img src="assets/img/gallery/thumbs/D_6.jpg"></a></div>
-                            <div class="c-item gallery-img"><a href="assets/img/gallery/img/C_2.jpg" data-caption="We love quiet walks on snow days"><img src="assets/img/gallery/thumbs/C_2.jpg"></a></div>
+                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_6.jpg" data-caption="Prismatic spring at Yellowstone"><img class="gallery-thumb" src="assets/img/gallery/thumbs/D_6.jpg"></a></div>
+                            <div class="c-item gallery-img"><a href="assets/img/gallery/img/C_2.jpg" data-caption="We love quiet walks on snow days"><img class="gallery-thumb" src="assets/img/gallery/thumbs/C_2.jpg"></a></div>
                         </div>
                         <div class="sub-row">
-                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_7.jpg" data-caption="Time to build the next Star Wars ship"><img src="assets/img/gallery/thumbs/D_7.jpg"></a></div>
+                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_7.jpg" data-caption="Time to build the next Star Wars ship"><img class="gallery-thumb" src="assets/img/gallery/thumbs/D_7.jpg"></a></div>
                         </div>
                         <div class="sub-row">
-                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_8.jpg" data-caption="Clouds rolling in against the winter landscape"><img src="assets/img/gallery/thumbs/D_8.jpg"></a></div>
-                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_9.jpg" data-caption="Some of the trails we hike go through pasture land. This one had a little ladder for navigating the fence!"><img src="assets/img/gallery/thumbs/D_9.jpg"></a></div>
-                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_10.jpg" data-caption="We travelled east of the Cascades to find this little guy"><img src="assets/img/gallery/thumbs/D_10.jpg"></a></div>
+                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_8.jpg" data-caption="Clouds rolling in against the winter landscape"><img class="gallery-thumb" src="assets/img/gallery/thumbs/D_8.jpg"></a></div>
+                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_9.jpg" data-caption="Some of the trails we hike go through pasture land. This one had a little ladder for navigating the fence!"><img class="gallery-thumb" src="assets/img/gallery/thumbs/D_9.jpg"></a></div>
+                            <div class="d-item gallery-img"><a href="assets/img/gallery/img/D_10.jpg" data-caption="We travelled east of the Cascades to find this little guy"><img class="gallery-thumb" src="assets/img/gallery/thumbs/D_10.jpg"></a></div>
                         </div>
                     </div>
 
                     <div class="sub-section">
-                        <div class="a-item gallery-img"><a href="assets/img/gallery/img/A_2.jpg" data-caption="The tree was like that when we found it, we promise!"><img src="assets/img/gallery/thumbs/A_2.jpg"></a></div>
+                        <div class="a-item gallery-img"><a href="assets/img/gallery/img/A_2.jpg" data-caption="The tree was like that when we found it, we promise!"><img class="gallery-thumb" src="assets/img/gallery/thumbs/A_2.jpg"></a></div>
                     </div>
                 </div>
 
                 <div id="row-3">
                     <div class="sub-section">
                         <div class="sub-row">
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_7.jpg" data-caption="We took many relaxing walks through the Sunken Gardens"><img src="assets/img/gallery/thumbs/B_7.jpg"></a></div>
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_8.jpg" data-caption="Playing around in the Kilmartin cairns in Scotland"><img src="assets/img/gallery/thumbs/B_8.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_7.jpg" data-caption="We took many relaxing walks through the Sunken Gardens"><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_7.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_8.jpg" data-caption="Playing around in the Kilmartin cairns in Scotland"><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_8.jpg"></a></div>
                         </div>
                         <div class="sub-row">
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_9.jpg" data-caption="Darin completed his first half marathon! He was rewarded with Runzas and beer."><img src="assets/img/gallery/thumbs/B_9.jpg"></a></div>
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_10.jpg" data-caption="Darin's pepper plant growing quite well in the balcony garden."><img src="assets/img/gallery/thumbs/B_10.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_9.jpg" data-caption="Darin completed his first half marathon! He was rewarded with Runzas and beer."><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_9.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_10.jpg" data-caption="Darin's pepper plant growing quite well in the balcony garden."><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_10.jpg"></a></div>
                         </div>
                     </div>
                     <div class="sub-section">
-                        <div class="a-item gallery-img"><a href="assets/img/gallery/img/A_3.jpg" data-caption="We're engaged!"><img src="assets/img/gallery/thumbs/A_3.jpg"></a></div>
+                        <div class="a-item gallery-img"><a href="assets/img/gallery/img/A_3.jpg" data-caption="We're engaged!"><img class="gallery-thumb" src="assets/img/gallery/thumbs/A_3.jpg"></a></div>
                     </div>
                     <div class="sub-section">
                         <div class="sub-row">
-                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_4.jpg" data-caption="Downtown Lincoln in the snow"><img src="assets/img/gallery/thumbs/E_4.jpg"></a></div>
-                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_5.jpg" data-caption="A weekend spent playing board games"><img src="assets/img/gallery/thumbs/E_5.jpg"></a></div>
-                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_6.jpg" data-caption="Sometimes it is hard to find real frogs, so this one will do."><img src="assets/img/gallery/thumbs/E_6.jpg"></a></div>
+                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_4.jpg" data-caption="Downtown Lincoln in the snow"><img class="gallery-thumb" src="assets/img/gallery/thumbs/E_4.jpg"></a></div>
+                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_5.jpg" data-caption="A weekend spent playing board games"><img class="gallery-thumb" src="assets/img/gallery/thumbs/E_5.jpg"></a></div>
+                            <div class="e-item gallery-img"><a href="assets/img/gallery/img/E_6.jpg" data-caption="Sometimes it is hard to find real frogs, so this one will do."><img class="gallery-thumb" src="assets/img/gallery/thumbs/E_6.jpg"></a></div>
                         </div>
                         <div class="sub-row">
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_11.jpg" data-caption="Admiring the architectural design of the University of Iowa's Art Library"><img src="assets/img/gallery/thumbs/B_11.jpg"></a></div>
-                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_12.jpg" data-caption="Our first Valentine's Day dinner! Delicious but maybe too much work for one meal."><img src="assets/img/gallery/thumbs/B_12.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_11.jpg" data-caption="Admiring the architectural design of the University of Iowa's Art Library"><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_11.jpg"></a></div>
+                            <div class="b-item gallery-img"><a href="assets/img/gallery/img/B_12.jpg" data-caption="Our first Valentine's Day dinner! Delicious but maybe too much work for one meal."><img class="gallery-thumb" src="assets/img/gallery/thumbs/B_12.jpg"></a></div>
                         </div>
                     </div>
                 </div>
@@ -109,3 +109,18 @@
 </div>
 
 <hr class="uk-divider-icon" />
+
+<script>
+        const images = document.querySelectorAll('.gallery-thumb');
+        const config = {
+     // If the image gets within 50px in the Y axis, start the download.
+     rootMargin: '50px 0px',
+     threshold: 0.01
+   };
+   
+   // The observer for the images on the page
+   let observer = new IntersectionObserver(onIntersection, config);
+     images.forEach(image => {
+       observer.observe(image);
+     });
+       </script>
