--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -11,7 +11,7 @@
         <br />
             <div uk-grid class="uk-grid-divider">
                 <div class="uk-width-1-2 uk-text-right time-column">
-                    <div class="time">4:30pm</div>
+                    <div class="time">4:00pm</div>
                     <div class="time-icon"><img src="assets/img/wedding.png"/></div>
                 </div>
                 <div class="uk-width-1-2">
@@ -63,7 +63,7 @@
                         <div uk-grid class="card-div">
                             <div class="uk-width-2-3">
                                 <p class="hotel-title"><span>Residence Inn</span> Lincoln South</p>
-                                <p>Hotel block: coming soon</p>
+                                <p>Hotel block: <a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1561581786734&key=GRP&app=resvlink">$135/night</a></p>
                                 <p>Suite-style rooms with complimentary breakfast</p>
                             </div>
                             <div class="uk-width-1-3">
@@ -259,6 +259,19 @@
 
                 <h2>Do</h2>
                 
+                <div class="uk-card uk-card-body uk-card-secondary">
+                    <h3 class="uk-card-title">First Friday Art Walk</h3>
+                    <div class="uk-grid-small uk-child-width-1-6@m" uk-grid>
+                        <div class="uk-width-5-6">
+                            <p>The first Friday of every month (that's November 1st!), businesses and galleries in downtown Lincoln open their doors between 5 and 10pm 
+                                with art displays, hands-on activities, food & drinks, and more. November's activities should be posted to their site by late October.
+                            </p>
+                        </div>
+                        <div class="uk-width-1-6">
+                            <a href="https://downtownlincoln.org/explore/first-friday" target="_blank"><button class="uk-button uk-button-default link-button">Site</button></a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="uk-card uk-card-body uk-card-secondary">
                     <h3 class="uk-card-title">Haymarket/The Railyard</h3>
