--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -63,11 +63,11 @@
                         <div uk-grid class="card-div">
                             <div class="uk-width-2-3">
                                 <p class="hotel-title"><span>Residence Inn</span> Lincoln South</p>
-                                <p>Hotel block: <a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1561581786734&key=GRP&app=resvlink">$135/night</a></p>
+                                <p>Hotel block: <a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1561581786734&key=GRP&app=resvlink" target="_blank">$135/night</a></p>
                                 <p>Suite-style rooms with complimentary breakfast</p>
                             </div>
                             <div class="uk-width-1-3">
-                                <a href="https://www.marriott.com/hotels/travel/lnkri-residence-inn-lincoln-south/" target="_blank"><button class="uk-button uk-button-default" id="residence-inn-site-button">Site</button></a>
+                                <a href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1561581786734&key=GRP&app=resvlink" target="_blank"><button class="uk-button uk-button-default" id="residence-inn-site-button">Site</button></a>
                                 <button class="uk-button uk-button-default map-button" id="residence-inn-map-button">Map</button>
                             </div>
                             <iframe class="hotel-map" id="residence-inn-map" width="500" height="450" frameborder="0" style="border:0; margin-top:20px;" src="https://www.google.com/maps/embed/v1/place?q=Residence%20Inn%20Lincoln%20South&key=AIzaSyDzDdM6BiMm5B5i1jZ3mGx92yDCbzo8wXQ&zoom=10" allowfullscreen></iframe>
@@ -80,10 +80,11 @@
                         <div uk-grid class="card-div">
                             <div class="uk-width-2-3">
                                 <p class="hotel-title"><span>Holiday Inn</span> Lincoln Southwest</p>
+                                <p>Hotel block: <a href="https://www.ihg.com/holidayinn/hotels/us/en/lincoln/lnkpz/hoteldetail?fromRedirect=true&qSrt=sBR&qIta=99801505&icdv=99801505&qSlH=LNKPZ&qGrpCd=BRW&setPMCookies=true&qDest=2500%20Tamarin%20Ridge%20Road,%20Lincoln,%20NE,%20US&srb_u=1" target="_blank">$94/night</a></p>
                                 <p>Standard rooms with an indoor pool</p>
                             </div>
                             <div class="uk-width-1-3">
-                                <a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/lincoln/lnkne/hoteldetail" target="_blank"><button class="uk-button uk-button-default" id="holiday-inn-site-button">Site</button></a>
+                                <a href="https://www.ihg.com/holidayinn/hotels/us/en/lincoln/lnkpz/hoteldetail?fromRedirect=true&qSrt=sBR&qIta=99801505&icdv=99801505&qSlH=LNKPZ&qGrpCd=BRW&setPMCookies=true&qDest=2500%20Tamarin%20Ridge%20Road,%20Lincoln,%20NE,%20US&srb_u=1" target="_blank"><button class="uk-button uk-button-default" id="holiday-inn-site-button">Site</button></a>
                                 <button class="uk-button uk-button-default map-button" id="holiday-inn-map-button">Map</button>
                             </div>
                             <iframe class="hotel-map" id="holiday-inn-map" width="500" height="450" frameborder="0" style="border:0; margin-top:20px;" src="https://www.google.com/maps/embed/v1/place?q=Holiday%20Inn%20Lincoln%20Southwest&key=AIzaSyDzDdM6BiMm5B5i1jZ3mGx92yDCbzo8wXQ&zoom=10" allowfullscreen></iframe>
