Remove map and enlarge navigation for hotel block

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -29,7 +29,6 @@
          amounts of allergens. We will then work with our caterer to ensure our menu is safe for everyone and that our items are labelled appropriately. We don't want anyone 
          having to eat a smashed granola bar they brought with them from the car!
         </p>
-        <p>Depending on the number of children in attendance, we may be able to offer a child-friendly menu as well.</p>
         <p>If you have any specific concerns, please feel free to <a href="mailto:c.bales@outlook.com">reach out to us</a>.</p>
       </div>
 
@@ -38,7 +37,7 @@
             What kind of drinks will be available?
           </h2>
           <p class="answer">
-            We will have coffee, soft drinks, and plenty of water available. In addition, we will also have an open bar with beer, wine and cocktails, so you won't have to go hunting down an ATM 30 minutes before the ceremony starts!
+            We will have coffee, soft drinks, and plenty of water available. In addition, we will also have an open bar with beer, wine and cocktails!
           </p>
       </div>
 
