--- a/src/app/schedule/schedule.component.css
+++ b/src/app/schedule/schedule.component.css
@@ -10,6 +10,15 @@
     margin-bottom: 100px !important;
 }
 
+.uk-open .uk-accordion-title {
+    color: white !important;
+}
+
+.uk-accordion-title {
+    color: #bbb;
+    font-size: 2.4rem;
+}
+
 
 #reception-map {
     display:none;
