--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -5,12 +5,12 @@
             <!-- Remove rsvp-title ID if you want to remove large, white formatting-->
             <legend class="uk-legend" id="rsvp-title">RSVP</legend>
             <div class="rsvp-content"><img src="../../assets/img/rsvp.png" alt="RSVP-icon" id="rsvp-icon"></div>
-            <div class="rsvp-content"><p>We will start accepting RSVP's once invitations are sent out. Look for your letter in the mail sometime in August.</p></div>
+            <!-- <div class="rsvp-content"><p>We will start accepting RSVP's once invitations are sent out. Look for your letter in the mail sometime in August.</p></div> -->
 
-            <!-- <div class="uk-margin uk-width-1-2">
+            <div class="uk-margin uk-width-1-2 uk-align-center">
                 <input class="uk-input" type="text" id="firstName" placeholder="First Name">
             </div>
-            <div class="uk-margin uk-width-1-2">
+            <div class="uk-margin uk-width-1-2 uk-align-center">
                 <input class="uk-input" type="text" id="lastName" placeholder="Last Name">
             </div>
 
@@ -18,10 +18,9 @@
             <div class="uk-button uk-button-default" id="lookup-searching"><img src="../../assets/img/search.gif" alt="Searching for your invitation" /></div>
 
             <div class="invitees">
-                FILL ME!
             </div>
 
-            <div class="uk-button uk-button-default" id="send"><span>Submit</span></div> -->
+            <div class="uk-button uk-button-default" id="send"><span>Submit</span></div>
     </form>
   </div>
 </div>
