--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -20,6 +20,9 @@
             <div class="invitees">
             </div>
 
+            <div class="rehearsal">
+            </div>
+
             <div class="uk-button uk-button-default" id="send"><span>Submit</span></div>
     </form>
   </div>
