--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -4,7 +4,7 @@
                 <div class="uk-navbar-center">
                     <ul class="uk-navbar-nav">
                         <li class="uk-active"><a href="#details-section">Details</a></li>
-                        <li><a href="#rsvp-section">RSVP</a></li>
+                        <li><a id="rsvp-link" href="#rsvp-section">RSVP</a></li>
                         <li><a href="#registry-section">Registry</a></li>
                         <li><a href="#faq-section">FAQ</a></li>
                         <li><a href="#story-section">Our Story</a></li>
