Data center info

--- a/src/app/wedding/wedding.component.html
+++ b/src/app/wedding/wedding.component.html
@@ -60,13 +60,14 @@
             <img id="ring-box" src="assets/img/ring-box.png">
             <div id="sub-footer">
                 <div id="countdown" uk-countdown="date: 2019-11-02T18:00:00+00:00">See you in <span class="uk-countdown-number uk-countdown-days uk-text-small"> </span> days!</div>
-
+                <div id="carbon-cloud">This site runs from a carbon-neutral data center</div>
                 <div id="contact-buttons">
                     <div><a href="mailto:c.bales@outlook.com"><img src="assets/img/email.png"></a></div>
                     <div><a href="#" uk-toggle="target: #bug-modal"><img id="bug-icon" src="assets/img/bug.png"></a></div>
                 </div>
 
             </div>
+            
         </div>
     </div>
 
