--- a/src/app/wedding/wedding.component.css
+++ b/src/app/wedding/wedding.component.css
@@ -12,7 +12,7 @@ body {
 }
 #sub-footer{
     padding-top: 5px;
-    height: 50px;
+    height: 70px;
     background-color: rgba(39, 39, 39, .7);
     text-align: center;
 }
@@ -87,10 +87,13 @@ body {
     background-color: #13131361;
     padding: 5px;
 }
-
+#carbon-cloud {
+    font-size: 12px;
+    margin-top: 10px;
+}
 #contact-buttons {
     float: right;
-    margin-top: -20px;
+    margin-top: -40px;
     margin-right: 20px;
 }
 #contact-buttons div {
