--- a/src/app/registry/registry.component.html
+++ b/src/app/registry/registry.component.html
@@ -2,7 +2,7 @@
   <h1>Registries</h1>
   <div class="uk-grid-medium uk-text-center" uk-grid>
     <div class="uk-card uk-card-hover uk-card-secondary uk-width-1-3"><a href="https://www.crateandbarrel.com/gift-registry/caitlin-bales-and-darin-russell/r5920551" target="_blank"><img src="../../assets/img/crate-logo.png" alt="Crate &amp; Barrel"></a></div>
-    <div class="uk-card uk-card-hover uk-card-secondary uk-width-1-3 coming-soon" onmouseover="showComingSoon(this)" onmouseout="hideComingSoon(this)"><img src="../../assets/img/the-home-depot-logo.svg" alt="The Home Depot"></div>
+    <div class="uk-card uk-card-hover uk-card-secondary uk-width-1-3"><a href="https://www.amazon.com/wedding/caitlin-bales-darin-russell-lincoln-november-2019/registry/31RB2MZG2FS3C" target="_blank"><img src="../../assets/img/amazon-logo.png" alt="Amazon"></a></div>
     <div class="uk-card uk-card-hover uk-card-secondary uk-width-1-3"><a href="https://donate.nationalparks.org/page/23790/donate/1?chain" target="_blank"><img src="../../assets/img/npf.png" alt="National Park Foundation"></a></div>
   </div>
   </div>
