--- a/src/app/registry/registry.component.css
+++ b/src/app/registry/registry.component.css
@@ -14,3 +14,15 @@
 h1 {
     margin-top: 60px; /* Fix for nav */
 }
+.uk-modal-body{
+    background-color: rgb(53, 53, 53);
+    color: #e2e2e2;
+}
+.donate-button {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+#donate-link {
+    color: white !important;
+}
